Removing /package folder

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "note-frequency-map",
   "version": "0.0.1",
-  "description": "This tool can find the frequencies for any note.",
+  "description": "This tool can find the frequencies of any note.",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
